--- a/筆記.md
+++ b/筆記.md
@@ -44,7 +44,7 @@ git push -u origin main
 ** 了解下面再幹嘛再用 不要隨便亂用**
 
 ```git
-git add . ; if ($?) { git commit -m "v2.0 對話，記錄功能完成" } ; if ($?) { git push -u origin main }
+git add . ; if ($?) { git commit -m "v2.0.1 對話功能加強" } ; if ($?) { git push -u origin main }
 ```
 
 ### 3.將儲存庫下載到本機端
