--- a/版本細述.md
+++ b/版本細述.md
@@ -63,7 +63,15 @@ ex ： [1.0.0] - 2024-12-21
 儲存功能完成
 聊天功能加強
 
-## v2.0.1
+## v2.1.0
 ## 修正部分功能
-調教AI
-部分功能修正
+調教AI回應邏輯
+記錄功能修正
+儲存功能修正
+
+## v2.2.0
+## 新增功能
+richmenu選單功能
+產生圖表功能
+分析圖表功能
+圖表功能修正
