--- a/版本細述.md
+++ b/版本細述.md
@@ -69,6 +69,12 @@ ex ： [1.0.0] - 2024-12-21
 記錄功能修正
 儲存功能修正
 
+## v2.1.1
+## 新增主頁功能
+加入新好友自動歡迎訊息
+連結NKUST IC首頁
+編輯主頁資訊
+
 ## v2.2.0
 ## 新增功能
 richmenu選單功能
