--- a/各檔案用處介紹.md
+++ b/各檔案用處介紹.md
@@ -2,28 +2,28 @@
 
 ## Mygo資料夾
 
-放圖片 目前無用途
+放圖片 目前無用途(忽略)
 
 ## .env.example
 
-介紹env檔案裏面的函數
+介紹env檔案裏面的函數(請自行新增.env)
 
 ## line_bot_main.py
 
-主程式檔案 負責回傳訊息函數
+主程式檔案 負責回傳訊息函數(須測試先請至test.py)
 
 ## mygo_talking 
 
-聊天部分的函數
+聊天部分的函數(AI調教存放區)
 
 ## record_data.py
 
-記錄用戶的心情 日記 睡眠
+記錄用戶的心情 日記 睡眠(用來產生user_data.json用戶資料記錄)
 
 ## test.py
 
-程式碼測試
+程式碼測試(先一律用此檔案測試程式)
 
 ## user_data.json
 
-用戶資料記錄
+用戶資料記錄(用於分析與產生圖表)
