--- a/筆記.md
+++ b/筆記.md
@@ -44,7 +44,7 @@ git push -u origin main
 ** 了解下面再幹嘛再用 不要隨便亂用**
 
 ```git
-git add . ; if ($?) { git commit -m "v2.2.1 圖表生成完成" } ; if ($?) { git push -u origin main }
+git add . ; if ($?) { git commit -m "v3.0.0 新增心理諮商模式" } ; if ($?) { git push -u origin main }
 ```
 
 ### 3.將儲存庫下載到本機端
