--- a/各檔案用處介紹.md
+++ b/各檔案用處介紹.md
@@ -12,7 +12,7 @@
 
 主程式檔案 負責回傳訊息函數(須測試先請至test.py)
 
-## mygo_talking 
+## mygo_talking.py
 
 聊天部分的函數(AI調教存放區)
 
@@ -26,4 +26,20 @@
 
 ## user_data.json
 
-用戶資料記錄(用於分析與產生圖表)
+用戶心情 日記 睡眠資料記錄(用於分析與產生圖表)
+
+## example.txt
+
+心理諮商範例
+
+## history.txt
+
+用戶的聊天紀錄
+
+## Create_analysis_eports.py
+
+創造分析圖表程式碼
+
+## talking.py
+
+心理諮商模式程式碼
