--- a/版本細述.md
+++ b/版本細述.md
@@ -85,9 +85,13 @@ richmenu選單功能
 AI分析圖表資訊
 
 ## v3.0.0
-## 新增功能
-richmenu選單功能新增
+## 新增與加強功能
 心理諮商模式
 存取過往的對話
 讓AI知道過往對話
+
+## v3.1.0
+## 新增修正功能
+richmenu選單功能新增
+主頁資訊修改
 更改日記功能(可供讀寫)
