使用說明書

--- a/使用說明書.md
+++ b/使用說明書.md
@@ -1,6 +1,6 @@
 # 使用說明
 1. 紀錄今日心情
-觸發方式：發送訊息「紀錄今日心情」或「記錄今日心情」。
+觸發方式：發送訊息「紀錄今日心情」。
 操作流程：
 用戶輸入 1-10 的數字來表示心情（數字越高表示越開心）。
 系統會回覆「心情紀錄完成！」。
@@ -14,7 +14,7 @@
 若輸入「讀 7」，則可以查看 7 天前的日記。
 
 3. 紀錄睡眠情況
-觸發方式：發送訊息「紀錄睡眠情況」或「記錄睡眠情況」。
+觸發方式：發送訊息「紀錄睡眠情況」。
 操作流程：
 用戶輸入睡眠時間（單位：小時，例如 7.5）。
 系統會回覆「睡眠紀錄完成！」。
