--- a/使用說明書.md
+++ b/使用說明書.md
@@ -9,9 +9,9 @@
 2. 讀寫今日日記
 觸發方式：發送訊息「讀寫今日日記」。
 系統會提示：
-輸入'讀 日期'查看日記，日期請填入你要看的天數；輸入'寫'寫入日記。
+輸入'讀 日期'查看日記，日期請填入20xx-xx-xx；輸入'寫'寫入日記。
 若輸入「寫」，則可以開始寫日記，完成後系統會提示「日記紀錄完成！」。
-若輸入「讀 7」，則可以查看 7 天前的日記。
+若輸入「讀 2025-01-01」，則可以查看 2025-01-01的日記。
 
 3. 紀錄睡眠情況
 觸發方式：發送訊息「紀錄睡眠情況」。
@@ -24,11 +24,12 @@
 觸發方式：發送訊息「心理諮商模式」。
 操作流程：
 系統進入心理諮商模式，並提示「已開啟心理諮商模式」。
-用戶輸入的訊息將由心理諮商對話功能回應。
+用戶輸入的訊息將由心理諮商對話功能回應，讓AI記得過往對話紀錄，保持聊天連貫性。
 要結束心理諮商模式，發送訊息「結束心理諮商模式」。
 
 5. 產生分析圖表
 觸發方式：發送訊息「產生分析圖表」。
 操作流程：
 系統提示「正在產生分析圖表，請稍後...」。
-系統生成分析報告，並推送圖表和詳細分析結果（例如平均睡眠時數、心情最差的日子等）。
+系統生成分析報告，並推送圖表和詳細分析結果（例如平均睡眠時數、心情最差的日子等）
+並由AI分析並給出建議。
