--- a/使用說明書.md
+++ b/使用說明書.md
@@ -1,17 +1,17 @@
 # 使用說明
-1. 紀錄今日心情
-觸發方式：發送訊息「紀錄今日心情」。
-操作流程：
-用戶輸入 1-10 的數字來表示心情（數字越高表示越開心）。
-系統會回覆「心情紀錄完成！」。
-備註： 若輸入無效數字，系統會提示「請輸入 1-10 的數字」。
+1. 紀錄今日心情<br>
+觸發方式：發送訊息「紀錄今日心情」。<br>
+操作流程：<br>
+用戶輸入 1-10 的數字來表示心情（數字越高表示越開心）。<br>
+系統會回覆「心情紀錄完成！」。<br>
+備註： 若輸入無效數字，系統會提示「請輸入 1-10 的數字」。<br>
 
 2. 讀寫今日日記
-觸發方式：發送訊息「讀寫今日日記」。
-系統會提示：
-輸入'讀 日期'查看日記，日期請填入20xx-xx-xx；輸入'寫'寫入日記。
-若輸入「寫」，則可以開始寫日記，完成後系統會提示「日記紀錄完成！」。
-若輸入「讀 2025-01-01」，則可以查看 2025-01-01的日記。
+觸發方式：發送訊息「讀寫今日日記」。<br>
+系統會提示：<br>
+輸入'讀 日期'查看日記，日期請填入20xx-xx-xx；輸入'寫'寫入日記。<br>
+若輸入「寫」，則可以開始寫日記，完成後系統會提示「日記紀錄完成！」。<br>
+若輸入「讀 2025-01-01」，則可以查看 2025-01-01的日記。<br>
 
 3. 紀錄睡眠情況
 觸發方式：發送訊息「紀錄睡眠情況」。
