--- a/使用說明書.md
+++ b/使用說明書.md
@@ -14,22 +14,22 @@
 若輸入「讀 2025-01-01」，則可以查看 2025-01-01的日記。<br>
 
 3. 紀錄睡眠情況
-觸發方式：發送訊息「紀錄睡眠情況」。
-操作流程：
-用戶輸入睡眠時間（單位：小時，例如 7.5）。
-系統會回覆「睡眠紀錄完成！」。
-備註： 若輸入值無效（如小於 0 或大於 24 的數字），系統會提示「請輸入有效的睡眠時間」。
+觸發方式：發送訊息「紀錄睡眠情況」。<br>
+操作流程：<br>
+用戶輸入睡眠時間（單位：小時，例如 7.5）。<br>
+系統會回覆「睡眠紀錄完成！」。<br>
+備註： 若輸入值無效（如小於 0 或大於 24 的數字），系統會提示「請輸入有效的睡眠時間」。<br>
 
 4. 心理諮商模式
-觸發方式：發送訊息「心理諮商模式」。
-操作流程：
-系統進入心理諮商模式，並提示「已開啟心理諮商模式」。
-用戶輸入的訊息將由心理諮商對話功能回應，讓AI記得過往對話紀錄，保持聊天連貫性。
-要結束心理諮商模式，發送訊息「結束心理諮商模式」。
+觸發方式：發送訊息「心理諮商模式」。<br>
+操作流程：<br>
+系統進入心理諮商模式，並提示「已開啟心理諮商模式」。<br>
+用戶輸入的訊息將由心理諮商對話功能回應，讓AI記得過往對話紀錄，保持聊天連貫性。<br>
+要結束心理諮商模式，發送訊息「結束心理諮商模式」。<br>
 
 5. 產生分析圖表
-觸發方式：發送訊息「產生分析圖表」。
-操作流程：
-系統提示「正在產生分析圖表，請稍後...」。
-系統生成分析報告，並推送圖表和詳細分析結果（例如平均睡眠時數、心情最差的日子等）
-並由AI分析並給出建議。
+觸發方式：發送訊息「產生分析圖表」。<br>
+操作流程：<br>
+系統提示「正在產生分析圖表，請稍後...」。<br>
+系統生成分析報告，並推送圖表和詳細分析結果（例如平均睡眠時數、心情最差的日子等）<br>
+並由AI分析並給出建議。<br>
