--- a/版本細述.md
+++ b/版本細述.md
@@ -93,5 +93,12 @@ AI分析圖表資訊
 ## v3.1.0
 ## 新增修正功能
 richmenu選單功能新增
-主頁資訊修改
+主頁資訊修改(頭貼與介紹)
 更改日記功能(可供讀寫)
+
+## v3.1.1
+## bug修正
+讀取日期之錯誤
+回傳圖表之錯誤
+重新調教 AI(心理諮商模式)
+日記回傳之錯誤
