--- a/使用說明書.md
+++ b/使用說明書.md
@@ -1,4 +1,4 @@
-# 使用說明
+# 簡易使用說明(主要功能均為richmenu觸發)
 1. 紀錄今日心情<br>
 觸發方式：發送訊息「紀錄今日心情」。<br>
 操作流程：<br>
@@ -32,4 +32,4 @@
 操作流程：<br>
 系統提示「正在產生分析圖表，請稍後...」。<br>
 系統生成分析報告，並推送圖表和詳細分析結果（例如平均睡眠時數、心情最差的日子等）<br>
-並由AI分析並給出建議。<br>
+並由AI分析總結並給出建議。<br>
